2011-11-03  Oliver Hader  <oliver.hader@typo3.org>

	* Initial version of the extension