@@ -3,5 +3,18 @@ if (!defined('TYPO3_MODE')) {
 	die ('Access denied.');
 }
 
-t3lib_extMgm::addStaticFile($_EXTKEY, 'Configuration/TypoScript/', 'Contrast Switch');
+t3lib_extMgm::addStaticFile(
+	$_EXTKEY,
+	'Configuration/TypoScript/',
+	'Contrast Switch'
+);
+
+t3lib_extMgm::addTcaSelectItem(
+	'pages',
+	'module',
+	array(
+		'LLL:EXT:contrast/Resources/Private/locallang.xml:moduleTitle',
+		'contrast',
+	)
+);
 ?>
