@@ -1,3 +1,8 @@
+2011-11-04  Oliver Hader  <oliver.hader@typo3.org>
+
+	* Add possibility to use pages.module as indicator to use it in menus
+	* Add hash to validate given url for redirecting
+
 2011-11-03  Oliver Hader  <oliver.hader@typo3.org>
 
 	* Initial version of the extension
